# simple-tftpd

./: .gitignore  CMakeLists.txt  GNUmakefile  Makefile  README.md  README.txt  WELCOME.txt
deployment/freebsd/: simple-tftpd.rc.conf.sample
deployment/init.d/: simple-tftpd
deployment/rc.d/: simple-tftpd
deployment/systemd/: simple-tftpd.service  simple-tftpd@.service  {{PROJECT_NAME}}.service
docs/: README.md
docs/datacenter/: configuration.md  deployment.md  performance.md
docs/enterprise/: deployment.md
docs/production/: README.md  configuration.md  deployment.md  installation.md  operations.md  performance.md  security.md
docs/shared/deployment/: PRODUCTION_DEPLOYMENT.md  monitoring.md
docs/shared/troubleshooting/: TROUBLESHOOTING.md
include/simple-tftpd/core/tftp/: packet.hpp
include/simple-tftpd/core/utils/: platform.hpp
main/: production.cpp
packaging/freebsd/: post-install.sh
packaging/linux/deb/: postinst  postrm  prerm
packaging/linux/rpm/: postinstall.sh  preuninstall.sh
project/: FEATURE_AUDIT.md  FEATURE_LICENSING.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_PROGRESS.md  PRODUCTION_READINESS_PLAN.md  PRODUCTION_RELEASE.md  PRODUCTION_STATUS.md  PROGRESS_REPORT.md  PROJECT_STATUS.md  TECHNICAL_DEBT.md
scripts/: build-linux.sh  build.sh  create-release-packages.sh  run-memory-tests.sh  validate-production-readiness.sh
src/core/tftp/: packet.cpp  server.cpp
src/tests/: CMakeLists.txt
